Fixed cut off sidebar background color -> delete position

--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -144,7 +144,6 @@
     /* IMPORTANTE */
     display: flex;
     align-items: center;
-    position: fixed;
 }
 
 .pagination {
